--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,19 @@
         android:theme="@style/Theme.ProyectoChatMovil"
         tools:targetApi="31">
         <activity
-            android:name=".SetupActivity"
+            android:name=".LoginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".PrincipalActivity"
             android:exported="false" />
         <activity
             android:name=".InicioActivity"
             android:exported="false" />
         <activity
-            android:name=".LoginActivity"
+            android:name=".RegistroActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SetupActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
